# spikelink

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ci.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
adapters/: __init__.py
docs/: README.md  transport_contract.md
src/spikelink/: __init__.py  api.py
src/spikelink/adapters/: __init__.py  brian2.py  lava.py  nengo.py  neo.py  nest.py  pynn.py  spikeinterface.py  tonic.py
src/spikelink/core/: codec.py  packet.py
src/spikelink/stress/: __init__.py  generators.py
src/spikelink/tests/: test_platform_brian2.py  test_platform_neo.py  test_platform_tonic.py  test_spikelink_V2.py
src/spikelink/types/: spiketrain.py
src/spikelink/v2/: __init__.py  codec.py  metrics.py  packet.py  types.py
src/spikelink/verification/: __init__.py  degradation.py  suite.py
src/spikelink/waveml/: __init__.py  core.py
tests/: __init__.py
tests/integration/: test_integration.py
tests/stress/: __init__.py
tests/unit/: __init__.py  nest_mock.py  test_codec.py  test_packet.py  test_platform_brian2.py  test_platform_neo.py  test_platform_nest.py  test_platform_pynn.py  test_platform_tonic.py  test_spiketrain.py
