# ═══════════════════════════════════════════════════════════════════════════
# PYPROJECT.TOML PATCH — Add these optional dependencies
# ═══════════════════════════════════════════════════════════════════════════
# Add/update this section in your pyproject.toml:

[project.optional-dependencies]
# Platform adapters
neo = [
    "neo>=0.12.0",
    "quantities>=0.14.0",
]
brian2 = [
    "brian2>=2.5.0",
]
tonic = [
    "tonic>=1.0.0",
]
pynn = [
    "PyNN>=0.10.0",
]
nest = []  # NEST installed separately via system package
nengo = [
    "nengo>=3.0.0",
]
lava = [
    "lava-nc>=0.5.0",
]
spikeinterface = [
    "spikeinterface>=0.99.0",
]

# Analysis tools
elephant = [
    "elephant>=0.12.0",
]

# Bundle: all platform adapters (except NEST which requires system install)
adapters = [
    "neo>=0.12.0",
    "quantities>=0.14.0",
    "brian2>=2.5.0",
    "tonic>=1.0.0",
    "PyNN>=0.10.0",
    "nengo>=3.0.0",
    "lava-nc>=0.5.0",
    "spikeinterface>=0.99.0",
]

# Bundle: everything
full = [
    "neo>=0.12.0",
    "quantities>=0.14.0",
    "brian2>=2.5.0",
    "tonic>=1.0.0",
    "PyNN>=0.10.0",
    "nengo>=3.0.0",
    "lava-nc>=0.5.0",
    "spikeinterface>=0.99.0",
    "elephant>=0.12.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
